// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Tag instance 1`] = `
<div
  className="ui-tag tag tagNoHover normal"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <Label
    className=""
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    noedit={true}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onUpdate={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text="test tag"
    theme={Object {}}
    useedit={false}
    visible={true}
    width=""
    xcss={null}
  />
</div>
`;

exports[`Test disabling of the simple Tag instance 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  usedelete={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tag tag tagNoHover normal disabled nohover"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      location="none"
      noedit={true}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="test tag"
      theme={Object {}}
      useedit={false}
      visible={true}
      width=""
      xcss={null}
    >
      <span
        className="ui-label label normal disabled nohover"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        test tag
      </span>
    </Label>
    <Styled(ButtonCircle)
      disabled={true}
      iconName="times"
      onClick={[Function]}
      sizing="small"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d9534f",
          "color": "#d9534f",
        }
      }
      visible={false}
    >
      <ButtonCircle
        className="sc-ifAKCX fYOzqy"
        contentEditable={false}
        direction="right"
        disabled={true}
        focus={false}
        height=""
        iconName="times"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="small"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#d9534f",
            "color": "#d9534f",
          }
        }
        testing={true}
        theme={Object {}}
        visible={false}
        width=""
        xcss={null}
      >
        <ThemeProvider
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#004358",
              "color": "#000000",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "hoverColor": "#c0c0c0",
            }
          }
        >
          <styled.div
            className="ui-button-circle sc-ifAKCX fYOzqy"
          >
            <div
              className="ui-button-circle sc-ifAKCX fYOzqy sc-bwzfXH Rlnso"
            >
              <styled.div
                height="18px"
                width="18px"
              >
                <div
                  className="sc-htpNat cmTRcR"
                  height="18px"
                  width="18px"
                >
                  <Styled(Button)
                    className="sc-ifAKCX fYOzqy"
                    contentEditable={false}
                    direction="right"
                    disabled={true}
                    focus={false}
                    height=""
                    iconName="times"
                    iconStyle=""
                    id=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    onClick={[Function]}
                    selected={false}
                    sizing="small"
                    style={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#d9534f",
                        "color": "#d9534f",
                      }
                    }
                    testing={true}
                    theme={Object {}}
                    visible={false}
                    width=""
                    xcss={null}
                  >
                    <Button
                      className="sc-ifAKCX fYOzqy sc-bxivhb jtLOVG"
                      contentEditable={false}
                      direction="right"
                      disabled={true}
                      focus={false}
                      height=""
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      selected={false}
                      sizing="small"
                      style={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#d9534f",
                          "color": "#d9534f",
                        }
                      }
                      testing={true}
                      theme={Object {}}
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "hoverColor": "#c0c0c0",
                          }
                        }
                      >
                        <styled.div
                          className="ui-button sc-ifAKCX fYOzqy sc-bxivhb jtLOVG"
                          disabled={true}
                          onClick={[Function]}
                          style={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#d9534f",
                              "color": "#d9534f",
                            }
                          }
                          visible={false}
                        >
                          <div
                            className="ui-button sc-ifAKCX fYOzqy sc-bxivhb jtLOVG sc-bdVaJa kNcZka"
                            disabled={true}
                            onClick={[Function]}
                            style={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#d9534f",
                                "color": "#d9534f",
                              }
                            }
                          >
                            <Icon
                              className=""
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              focus={false}
                              height=""
                              iconName="times"
                              id=""
                              imageFile=""
                              location="none"
                              noedit={false}
                              nohover={false}
                              noripple={false}
                              selected={false}
                              sizing="small"
                              style={Object {}}
                              testing={true}
                              theme={Object {}}
                              visible={true}
                              width=""
                              xcss={null}
                            >
                              <ThemeProvider
                                theme={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#004358",
                                    "color": "#000000",
                                    "headerBackgroundColor": "#004358",
                                    "headerForegroundColor": "#ffffff",
                                    "hoverColor": "#c0c0c0",
                                  }
                                }
                              >
                                <Icon__FontAwesome
                                  className="ui-icon fa fa-fw fa-times"
                                  sizing="small"
                                  style={Object {}}
                                >
                                  <i
                                    className="ui-icon fa fa-fw fa-times Icon__FontAwesome-kBRBjz iQDhYj"
                                    style={Object {}}
                                  />
                                </Icon__FontAwesome>
                              </ThemeProvider>
                            </Icon>
                          </div>
                        </styled.div>
                      </ThemeProvider>
                    </Button>
                  </Styled(Button)>
                </div>
              </styled.div>
            </div>
          </styled.div>
        </ThemeProvider>
      </ButtonCircle>
    </Styled(ButtonCircle)>
  </div>
</Tag>
`;

exports[`Test making Tag invisible 1`] = `
<Tag
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onDelete={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  usedelete={true}
  visible={false}
  width=""
  xcss={null}
>
  <div
    className="ui-tag tag tagNoHover normal invisible disabled nohover"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      id=""
      location="none"
      noedit={true}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="test tag"
      theme={Object {}}
      useedit={false}
      visible={false}
      width=""
      xcss={null}
    >
      <span
        className="ui-label label normal invisible disabled nohover"
        contentEditable={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        style={Object {}}
        suppressContentEditableWarning={true}
      >
        test tag
      </span>
    </Label>
    <Styled(ButtonCircle)
      disabled={true}
      iconName="times"
      onClick={[Function]}
      sizing="small"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d9534f",
          "color": "#d9534f",
        }
      }
      visible={false}
    >
      <ButtonCircle
        className="sc-ifAKCX fYOzqy"
        contentEditable={false}
        direction="right"
        disabled={true}
        focus={false}
        height=""
        iconName="times"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="small"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#d9534f",
            "color": "#d9534f",
          }
        }
        testing={true}
        theme={Object {}}
        visible={false}
        width=""
        xcss={null}
      >
        <ThemeProvider
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#004358",
              "color": "#000000",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "hoverColor": "#c0c0c0",
            }
          }
        >
          <styled.div
            className="ui-button-circle sc-ifAKCX fYOzqy"
          >
            <div
              className="ui-button-circle sc-ifAKCX fYOzqy sc-bwzfXH Rlnso"
            >
              <styled.div
                height="18px"
                width="18px"
              >
                <div
                  className="sc-htpNat cmTRcR"
                  height="18px"
                  width="18px"
                >
                  <Styled(Button)
                    className="sc-ifAKCX fYOzqy"
                    contentEditable={false}
                    direction="right"
                    disabled={true}
                    focus={false}
                    height=""
                    iconName="times"
                    iconStyle=""
                    id=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    onClick={[Function]}
                    selected={false}
                    sizing="small"
                    style={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#d9534f",
                        "color": "#d9534f",
                      }
                    }
                    testing={true}
                    theme={Object {}}
                    visible={false}
                    width=""
                    xcss={null}
                  >
                    <Button
                      className="sc-ifAKCX fYOzqy sc-bxivhb jtLOVG"
                      contentEditable={false}
                      direction="right"
                      disabled={true}
                      focus={false}
                      height=""
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      selected={false}
                      sizing="small"
                      style={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#d9534f",
                          "color": "#d9534f",
                        }
                      }
                      testing={true}
                      theme={Object {}}
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "hoverColor": "#c0c0c0",
                          }
                        }
                      >
                        <styled.div
                          className="ui-button sc-ifAKCX fYOzqy sc-bxivhb jtLOVG"
                          disabled={true}
                          onClick={[Function]}
                          style={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#d9534f",
                              "color": "#d9534f",
                            }
                          }
                          visible={false}
                        >
                          <div
                            className="ui-button sc-ifAKCX fYOzqy sc-bxivhb jtLOVG sc-bdVaJa kNcZka"
                            disabled={true}
                            onClick={[Function]}
                            style={
                              Object {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#d9534f",
                                "color": "#d9534f",
                              }
                            }
                          >
                            <Icon
                              className=""
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              focus={false}
                              height=""
                              iconName="times"
                              id=""
                              imageFile=""
                              location="none"
                              noedit={false}
                              nohover={false}
                              noripple={false}
                              selected={false}
                              sizing="small"
                              style={Object {}}
                              testing={true}
                              theme={Object {}}
                              visible={true}
                              width=""
                              xcss={null}
                            >
                              <ThemeProvider
                                theme={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#004358",
                                    "color": "#000000",
                                    "headerBackgroundColor": "#004358",
                                    "headerForegroundColor": "#ffffff",
                                    "hoverColor": "#c0c0c0",
                                  }
                                }
                              >
                                <Icon__FontAwesome
                                  className="ui-icon fa fa-fw fa-times"
                                  sizing="small"
                                  style={Object {}}
                                >
                                  <i
                                    className="ui-icon fa fa-fw fa-times Icon__FontAwesome-kBRBjz iQDhYj"
                                    style={Object {}}
                                  />
                                </Icon__FontAwesome>
                              </ThemeProvider>
                            </Icon>
                          </div>
                        </styled.div>
                      </ThemeProvider>
                    </Button>
                  </Styled(Button)>
                </div>
              </styled.div>
            </div>
          </styled.div>
        </ThemeProvider>
      </ButtonCircle>
    </Styled(ButtonCircle)>
  </div>
</Tag>
`;

exports[`Test retrieval of Tag props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "onDelete": [Function],
  "onMouseOut": [Function],
  "onMouseOver": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "usedelete": false,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
